Fix GH icon alignment

--- a/src/containers/Dashboard/DashboardHero/DashboardHero.module.scss
+++ b/src/containers/Dashboard/DashboardHero/DashboardHero.module.scss
@@ -15,7 +15,7 @@
 
 .right-nav-actions {
   @include flex-raj();
-  gap: 1rem;
+  gap: 1.6rem;
 }
 
 @media only screen and (max-width: 600px) {
